# xrfeitoria

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  LICENSE  README.md  XRFeitoriaGear.uplugin  pyproject.toml
.circleci/: Start-CircleCIRunner.ps1  circleci_api.py  config.yml  continue_config.yml  continue_config_full.yml  continue_config_lite.yml  create_runner_task.ps1
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: lint.yml  publish-to-pypi.yml  release.yml  unreal.yml
Content/: CustomMovieConfig.uasset  UI_Debugging.uasset
Content/Blueprints/: BP_SaveOptions.uasset
Content/Materials/: PPM_DepthMap_Parent.uasset  PPM_basecolor.uasset  PPM_depth.uasset  PPM_diffusecolor.uasset  PPM_mask_linear.uasset  PPM_metallic.uasset  PPM_normal_map.uasset  PPM_specular.uasset  PPM_velocity.uasset
Content/Materials/MRQ/: PPM_depth_EXR.uasset  PPM_mask_MRQ.uasset
Content/Python/: GLOBAL_VARS.py  asset_manage.py  custom_movie_pipeline.py  init_unreal.py  pipeline.py  pipeline_slice.py  pydantic_model.py  utils.py  utils_actor.py  utils_sequencer.py
Source/XRFeitoriaGear/: XRFeitoriaGear.Build.cs
Source/XRFeitoriaGear/Private/: CustomMoviePipelineDeferredPass.cpp  CustomMoviePipelineOutput.cpp  SF_BlueprintFunctionLibrary.cpp  XRFeitoriaGear.cpp
Source/XRFeitoriaGear/Public/: Annotator.h  CustomMoviePipelineDeferredPass.h  (+3 more)
docs/: Get-Started.md  Sequencer.md  Tutorial.md  api.rst  conf.py  index.rst
docs/en/: Makefile  README.md  api.rst  conf.py  faq.rst  index.rst  make.bat
docs/source/: GLOBAL_VARS.rst  asset_manage.rst  custom_movie_pipeline.rst  data.rst  init_unreal.rst  modules.rst  pipeline.rst  pydantic_model.rst  stencil_json.rst  utils_actor.rst  utils_sequencer.rst
misc/: build_docs.py  email_sender.py  ffmpeg.sh  render_config.yaml  render_config_common.yaml  render_config_rgb.yaml  requirements-ue.txt  requirements.txt  requirements_ue.txt  run_cmd.py  run_cmd_async.py  run_init.py  user.json  user_427.json  user_docs.json  vis_exr.py  visualize.ps1  visualize.py
requirements/: docs.txt
samples/: README.md  run_all.py  runall.py  setup.py  utils.py
samples/anim/: constants.py  motion.py  transform3d.py  utils.py
samples/blender/: 01_add_shapes.py  02_add_cameras.py  03_basic_render.py  04_staticmesh_render.py  05_skeletalmesh_render.py  06_custom_usage.py  07_amass.py
samples/unreal/: 01_add_shapes.py  02_add_cameras.py  03_basic_render.py  04_staticmesh_render.py  05_skeletalmesh_render.py  06_custom_usage.py  07_amass.py
scripts/: 08_blend.py
src/XRFeitoriaBpy/: __init__.py  constants.py  operators.py  properties.py  ui.py  utils_logger.py
src/XRFeitoriaUnreal/: XRFeitoriaUnreal.uplugin
tests/: README.md  setup.py  setup_ci.py  test.ipynb  utils.py
tests/blender/: actor.py  camera.py  init.py  level.py  main.py  renderer.py  sequence.py
tests/others/: multi_thread.py  projector.py
tests/unreal/: actor.py  audio.py  camera.py  init.py  main.py  sequence.py
tutorials/: 01_get_started.ipynb  02_add_cameras.ipynb  02_add_transform_keys.ipynb  02_random_transformation.ipynb  02_randomization.ipynb  03_human_nerf.ipynb  03_skeletal_mesh_and_multiview_rendering.ipynb  README.md
xrfeitoria/: __init__.py  constants.py  factory.py  version.py
xrfeitoria/actor/: __init__.py  actor_base.py  actor_blender.py  actor_unreal.py
xrfeitoria/camera/: __init__.py  camera_base.py  camera_blender.py  camera_parameter.py  camera_unreal.py
xrfeitoria/cmd/: __init__.py  render.py
xrfeitoria/data_structure/: constants.py  models.py
xrfeitoria/material/: material_base.py  material_blender.py
xrfeitoria/object/: __init__.py  object_base.py  object_utils.py
xrfeitoria/renderer/: __init__.py  renderer_base.py  renderer_blender.py  renderer_unreal.py
xrfeitoria/rpc/: __init__.py  client.py  exceptions.py  factory.py  validations.py
xrfeitoria/sequence/: __init__.py  sequence_base.py  sequence_base.pyi  sequence_blender.py  sequence_blender.pyi  sequence_unreal.py  sequence_unreal.pyi  sequence_wrapper.py  sequence_wrapper.pyi
xrfeitoria/utils/: __init__.py  converter.py  downloader.py  plugin_infos.json  projector.py  publish_plugins.py  reader.py  runner.py  setup.py  tools.py  validations.py  viewer.py
(+99 files in other folders)
